[tool.poetry]
name = "logic"
version = "0.0.0"
description = "Resolution for some logic tests."
authors = ["Matheus"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
notebook = "^6.5.3"

[tool.poetry.dev-dependencies]
commitizen = "^2.40.0"
python-semantic-release = "^7.33.0"
pre-commit = "^3.0.2"
black = "^22.12.0"
flake8 = "^5.0.4"
flake8-copyright = "^0.2.3"
isort = "^5.12.0"
mypy = "^0.991"
pylint = "^2.15.10"

[tool.semantic_release]
version_variable = ["src/__init__.py:__version__"]
branch = "main"
upload_to_pypi = false
upload_to_repository = false
upload_to_release = true
build_command = false

[tool.commitizen]
version = "2.40.0"
tag_format = "v$version"
version_files = ["src/__init__.py:__version__"]

[tool.isort]
profile = "black"
line_length = "120"
known_first_party = ["commitizen", "tests"]

[tool.black]
line-length = "120"

[tool.mypy]
disallow_incomplete_defs = "True"
disallow_untyped_defs = "True"
ignore_missing_imports = "True"

[tool.pylint]
init-hook = "import sys; sys.path.append('./src'), sys.path.append('./tests')"
fail-under = "10"

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.messages_control]
disable = ["C0114", "C0116", "C0301", "R0903", "W1203", "E0611"]

[tool.pylint.similarities]
ignore-imports = "yes"
min-similarity-lines = "15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
